Removes flex to fix mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,6 @@ h3 {
 		height: 100%;
 		padding: 3%;
 
-		display: flex;
 		position: relative;
 	}
 
